<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/twospace2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sevenspace"
            android:text="@string/txt_encabezado"
            android:textColor="@color/black"
            android:textSize="@dimen/twospace2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fivespace"
            android:text="@string/txt_cuestion1"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="@dimen/twospace" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:max="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fivespace"
            android:text="@string/txt_cuestion2"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="@dimen/twospace" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SI" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NO" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fivespace"
            android:text="@string/txt_cuestion3"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="@dimen/twospace" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space100"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:onClick="onClick"
            android:text="@string/btn_send"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>